src/css/components/task-list.less
/* ==============
 * Task List (Table)
 * ==============
 */
.table.task-list {
  .healthy {
    color: @task-health-healthy-color;
  }

  .unhealthy {
    color: @task-health-unhealthy-color;
  }

  .unknown {
    color: @task-health-unknown-color;
  }
}

.loading-bottom {
  margin-left: -5px;
  margin-top: 5px
}

